<resources>
    <string name="app_name">X-Pose Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="x_pose_tracker_logo">X Pose Tracker Logo</string>
    <string name="welcome_background">push up in the beach</string>
    <string name="welcome_message">Tracking Your Fitness!</string>
    <string name="welcome_description">X-Pose Tracker uses pose estimation technology to monitor push-ups, sit-ups, pull-ups, and lunges in real time, count repetitions, and record your workout progress!</string>
    <string name="mulai">Start</string>
    <string name="step1">Step 1 of 3</string>
    <string name="step2">Step 2 of 3</string>
    <string name="step_title">Enter your personal details!</string>
    <string name="step2_title">Enter your physical details!</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="name_hint">Full Name</string>
    <string name="tanggal_lahir">Date of Birth</string>
    <string name="date_icon">date icon</string>
    <string name="pria">Man</string>
    <string name="wanita">Woman</string>
    <string name="jenis_kelamin">Gender</string>
    <string name="splash_screen_text">Monitor, Correct, and Improve Your Fitness Test Performance with High Accuracy!</string>
    <string name="back_button">back button</string>
    <string name="weight_title">Weight (kg)</string>
    <string name="weight_hint">Weight</string>
    <string name="height_hint">Height</string>
    <string name="continue_">continue</string>
    <string name="step3">Step 3 of 3</string>
    <string name="step3_title">What is the purpose of using the application?</string>
    <string name="option1">Tracking Personal Progress</string>
    <string name="option2">Preparing Physical Fitness Tests</string>
    <string name="option3">Monitoring Test Results</string>
    <string name="finish">Finish</string>
    <string name="title_record">Record</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="height_title">Height (cm)</string>
    <string name="profile_image">profile image</string>
    <string name="welcome">Welcome</string>
    <string name="name_format">Your Full Name</string>
    <string name="calori">Calorie</string>
    <string name="duration">Duration</string>
    <string name="calori_icon">calorie icon</string>
    <string name="example_calorie">0</string>
    <string name="kcal">kcal</string>
    <string name="duration_icon">duration icon</string>
    <string name="seconds">seconds</string>
    <string name="example_duration">0</string>
    <string name="progress">Progress</string>
    <string name="push_up">push up</string>
    <string name="choose">Choose</string>
    <string name="workout_icon">workout icon</string>
    <string name="workout_name">Workout Name</string>
    <string name="date_example">DD MMMM YYYY</string>
    <string name="repetition">%d X</string>
    <string name="best_achievement">Best Achievement</string>
    <string name="gym_backgound">gym background</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tutorial">Tutorial</string>
    <string name="faq">FAQ</string>
    <string-array name="category_menu">
        <item>Auto Detection</item>
        <item>Push-Up</item>
        <item>Sit-Up</item>
        <item>Pull-Up</item>
        <item>Lunges</item>
    </string-array>
    <string-array name="gender_items">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="categories_menu">
        <item>Push-Up</item>
        <item>Sit-Up</item>
        <item>Pull-Up</item>
        <item>Lunges</item>
    </string-array>
    <string-array name="days_menu">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
        <item>All</item>
    </string-array>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="camera_icon">camera icon</string>
    <string name="perbarui">Update</string>
    <string name="name_empty">Name Cannot Be Left Blank</string>
    <string name="date_empty">Date of Birth Cannot Be Left Blank</string>
    <string name="gender_empty">Gender Cannot Be Left Blank</string>
    <string name="weight_empty">Weight Must Not Be Empty</string>
    <string name="height_empty">Height Must Not Be Empty</string>
    <string name="goal_empty">Goal Cannot Be Left Blank</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update_confirmation">Are You Sure You Want to Save the Changes?</string>
    <string name="cancel_confirmation">Are You Sure You Want to Cancel?</string>
    <string name="record_activity">Record Activity</string>
    <string name="private_tracker">Private</string>
    <string name="supervisor_tracker">Supervisor</string>
    <string name="type_activity">Activity Type</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="activity_duration">Activity Duration (Seconds)</string>
    <string name="activity">Activity</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_date">Activity Date</string>
    <string name="person_count">Person Count</string>
    <string name="activity_location">Activity Location</string>
    <string name="activity_supervisor">Activity Supervisor</string>
    <string name="activity_name">Activity Name</string>
    <string name="start">Start</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="location_name">Location Name</string>
    <string name="save">Save</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="edit">Edit</string>
    <string name="member">Member</string>
    <string name="add">Add</string>
    <string name="test_initial">AG</string>
    <string name="member_name">Member Name</string>
    <string name="delete_member">Delete Member</string>
    <string name="registration_number">Registration Number</string>
    <string name="export">Export</string>
    <string name="add_member">Add Member</string>
    <string name="member_detail">Member Detail</string>
    <string name="record">Record</string>
    <string name="no_data">No Data</string>
    <string name="event_empty">Event Name Cannot Be Left Blank</string>
    <string name="supervisor_empty">Supervisor Name Cannot Be Left Blank</string>
    <string name="location_empty">Location Cannot Be Left Blank</string>
    <string name="event_added">Event Added</string>
    <string name="regis_empty">Registration Number Cannot Be Left Blank</string>
    <string name="member_added">Member Added</string>
    <string name="edit_event">Edit Event</string>
    <string name="member_updated">Member Updated</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="capture_image">Capture Camera</string>
    <string name="type">Type</string>
    <string name="repetition_title">Repetition</string>
    <string name="duration_example">00:00</string>
    <string name="repetition_example">0</string>
    <string name="unknown">unknown</string>
    <string name="sit_up">sit up</string>
    <string name="pull_up">pull up</string>
    <string name="lunges">lunges</string>
    <string name="media_pipe">MediaPipe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video to begin running the pose landmarker.</string>
    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">Detection Threshold</string>
    <string name="label_pose_tracking_confidence_threshold">Tracking Threshold</string>
    <string name="label_pose_presence_confidence_threshold">Presence Threshold</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">Model</string>
    <string name="event_edited">Activity Successfully Updated</string>
    <string name="deleted">Data successfully deleted</string>
    <string name="start_recording">Record Data Started</string>
    <string name="duration_empty">Duration Cannot Be Left Blank</string>
    <string name="category_empty">Category Cannot Be Left Blank</string>
    <string name="history">History</string>
    <string name="frame_image">Frame Image</string>
    <string name="private_training">Private Training</string>
    <string name="time_icon">time icon</string>
    <string name="time_example">00:00</string>
    <string name="result">Activity Result</string>
    <string name="qna">Frequently Asked Questions</string>
    <string name="question1">What is X-Pose Tracker?</string>
    <string name="answer1">X-Pose Tracker is an application that uses pose estimation technology to monitor push-ups, sit-ups, pull-ups, and lunges in real time, count repetitions, and record your workout progress!</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="tutorial_activity">Tutorial</string>
    <string name="tutor">Click the icon to Watch the Tutorial on Using the X Pose Tracker Application</string>
    <string name="cancel_activity_confirmation">Are you sure you want to cancel the activity?</string>
    <string name="delete_event_confirmation">Are you sure you want to delete the activity?</string>
    <string name="delete_record">Delete Record</string>
    <string name="delete_activity_confirmation">Are you sure you want to delete the record?</string>
    <string name="user_record_added">Record successfully saved</string>
    <string name="stop_camera">Stop Camera</string>
    <string name="stop_record">Are you sure you want to finish the activity?</string>
    <string name="delete_user">Are you sure you want to delete %1$s?</string>
    <string name="time_format">%d seconds</string>
    <string name="calorie_format">%.2f kcal</string>
    <string name="person_format">%1$d people</string>
    <string name="csv_success">CSV successfully created!</string>
    <string name="open_csv">Open CSV with</string>
    <string name="failed_load_audio">Failed to load TTS</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="camera_permission">Please grant camera permission to use this feature</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="choose_image">Choose Image</string>
    <string name="failed_create_file">Failed to create file</string>
    <string name="camera_permission_dialog">Activate camera permission in the application settings</string>
    <string name="msg_hip_too_bent">Hip too bent</string>
    <string name="activity_streak_icon">activity streak icon</string>
    <string name="day_streak">%d Day Streak!</string>
    <string name="keep_going">Keep Going!</string>
    <string name="title_calculate">Calculate</string>
</resources>