<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/title_calculate" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/baseline_adjust_24"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_profile" />
</menu>