<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_1"
    tools:context=".ui.welcome.StepThreeFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/step"
            style="@style/TextLabel.SmallGray"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"/>

        <TextView
            android:id="@+id/step_title3"
            style="@style/TextLabel.HeadingWhite"
            android:paddingHorizontal="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/goal_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_title3"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                style="@style/GenderToggleButton"
                android:checked="true"
                app:icon="@drawable/circle"
                app:iconGravity="textStart"
                android:gravity="start|center_vertical"
                android:text="@string/option1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                style="@style/GenderToggleButton"
                app:icon="@drawable/circle"
                app:iconGravity="textStart"
                android:gravity="start|center_vertical"
                android:text="@string/option2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                style="@style/GenderToggleButton"
                app:icon="@drawable/circle"
                app:iconGravity="textStart"
                android:gravity="start|center_vertical"
                android:text="@string/option3" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/finish_button"
            style="@style/RoundedGreenButton"
            android:text="@string/finish"
            android:layout_marginVertical="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_toggle_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
