<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray_1"
    tools:context=".ui.welcome.StepOneFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/step"
            android:text="@string/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLabel.SmallGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/step_title"
            android:text="@string/step_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLabel.HeadingWhite"
            app:layout_constraintStart_toStartOf="@+id/step"
            app:layout_constraintTop_toBottomOf="@+id/step" />

        <TextView
            android:id="@+id/name_question"
            android:text="@string/nama_lengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLabel.BodyWhite"
            app:layout_constraintStart_toStartOf="@+id/step_title"
            app:layout_constraintTop_toBottomOf="@+id/step_title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputField.RoundedIcon"
            android:id="@+id/NameTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_question"
            app:layout_constraintTop_toBottomOf="@+id/name_question">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                style="@style/EditText.WhiteInput"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/date_question"
            style="@style/TextLabel.BodyWhite"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            app:layout_constraintStart_toStartOf="@+id/NameTextField"
            app:layout_constraintTop_toBottomOf="@+id/NameTextField" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/dark_gray_2"
            app:cardCornerRadius="18dp"
            app:layout_constraintStart_toStartOf="@id/date_question"
            app:layout_constraintTop_toBottomOf="@+id/date_question"
            app:strokeColor="@color/white_50"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/date_icon"
                    android:src="@drawable/date_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tanggal_lahir"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/date_icon"
                    app:layout_constraintStart_toEndOf="@+id/date_icon"
                    app:layout_constraintTop_toTopOf="@+id/date_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/gender_question"
            style="@style/TextLabel.BodyWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            app:layout_constraintStart_toStartOf="@+id/date_question"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/gender_toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/gender_question"
            app:layout_constraintTop_toBottomOf="@+id/gender_question"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_male"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                style="@style/GenderToggleButton"
                android:checked="true"
                app:icon="@drawable/man_icon_white"
                app:iconGravity="textStart"
                android:text="@string/pria" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_female"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                style="@style/GenderToggleButton"
                app:icon="@drawable/woman_icon_white"
                app:iconGravity="textStart"
                android:text="@string/wanita" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/continue_button"
            style="@style/RoundedGreenButton"
            android:layout_marginVertical="56dp"
            android:text="@string/continue_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_toggle_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
